feat: add default rule attribute and UI tweaks

--- a/projects/ngx-query-builder/src/lib/components/query-builder.component.css
+++ b/projects/ngx-query-builder/src/lib/components/query-builder.component.css
@@ -349,6 +349,7 @@
 
   .q-name-action-modified {
     border: 2px solid #B3415D;
+    background: rgba(179, 65, 93, 0.1);
   }
 
   .q-name-label {
